--- a/Notebook.Web/Resources/Views/Group/GroupInfo.tr-TR.resx
+++ b/Notebook.Web/Resources/Views/Group/GroupInfo.tr-TR.resx
@@ -117,49 +117,49 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Add Group" xml:space="preserve">
-    <value>Grup Ekle</value>
+  <data name="Are you sure you want to delete" xml:space="preserve">
+    <value>Silmek istediğine emin misin</value>
   </data>
-  <data name="Filter" xml:space="preserve">
-    <value>Filtrele</value>
+  <data name="Blocked" xml:space="preserve">
+    <value>Engellendin</value>
+  </data>
+  <data name="Date" xml:space="preserve">
+    <value>Tarih</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Düzenle</value>
+  </data>
+  <data name="Exit group" xml:space="preserve">
+    <value>Gruptan Çık</value>
   </data>
   <data name="Folders" xml:space="preserve">
     <value>Klasörler</value>
   </data>
-  <data name="Group List" xml:space="preserve">
-    <value>Grup Listesi</value>
-  </data>
-  <data name="Groups" xml:space="preserve">
-    <value>Gruplar</value>
-  </data>
-  <data name="Home" xml:space="preserve">
-    <value>Anasayfa</value>
-  </data>
   <data name="Members" xml:space="preserve">
     <value>Üyeler</value>
-  </data>
-  <data name="Name" xml:space="preserve">
-    <value>İsim</value>
   </data>
   <data name="Notes" xml:space="preserve">
     <value>Notlar</value>
   </data>
-  <data name="Private" xml:space="preserve">
-    <value>Kapalı</value>
+  <data name="Owner" xml:space="preserve">
+    <value>Sahibi</value>
   </data>
-  <data name="Public" xml:space="preserve">
-    <value>Herkese Açık</value>
+  <data name="Remove" xml:space="preserve">
+    <value>Sil</value>
   </data>
-  <data name="Search" xml:space="preserve">
-    <value>Ara</value>
+  <data name="Request Cancel" xml:space="preserve">
+    <value>İsteği iptal et</value>
   </data>
-  <data name="Total" xml:space="preserve">
-    <value>Toplam</value>
+  <data name="Request to join class" xml:space="preserve">
+    <value>Katılmak için istek gönder</value>
   </data>
-  <data name="User not found" xml:space="preserve">
-    <value>Kullanıcı bulunamadı</value>
+  <data name="Sign in for to join class" xml:space="preserve">
+    <value>Katılmak için oturum açınız</value>
   </data>
-  <data name="Username" xml:space="preserve">
-    <value>Kullanıcı Adı</value>
+  <data name="This group is closed to membership" xml:space="preserve">
+    <value>Bu grup üyeliğe kapalı</value>
+  </data>
+  <data name="Waiting approval" xml:space="preserve">
+    <value>Onay bekleyenler</value>
   </data>
 </root>
