--- a/Notebook.Web/Resources/Views/User/UserInfo.tr-TR.resx
+++ b/Notebook.Web/Resources/Views/User/UserInfo.tr-TR.resx
@@ -117,49 +117,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Add Group" xml:space="preserve">
-    <value>Grup Ekle</value>
+  <data name="Follow" xml:space="preserve">
+    <value>Takip Et</value>
   </data>
-  <data name="Filter" xml:space="preserve">
-    <value>Filtrele</value>
+  <data name="Followers" xml:space="preserve">
+    <value>Takipçiler</value>
   </data>
-  <data name="Folders" xml:space="preserve">
-    <value>Klasörler</value>
-  </data>
-  <data name="Group List" xml:space="preserve">
-    <value>Grup Listesi</value>
+  <data name="Following" xml:space="preserve">
+    <value>Takip Edilenler</value>
   </data>
   <data name="Groups" xml:space="preserve">
     <value>Gruplar</value>
   </data>
-  <data name="Home" xml:space="preserve">
-    <value>Anasayfa</value>
-  </data>
-  <data name="Members" xml:space="preserve">
-    <value>Üyeler</value>
-  </data>
-  <data name="Name" xml:space="preserve">
-    <value>İsim</value>
+  <data name="Message" xml:space="preserve">
+    <value>Mesaj</value>
   </data>
   <data name="Notes" xml:space="preserve">
     <value>Notlar</value>
   </data>
-  <data name="Private" xml:space="preserve">
-    <value>Kapalı</value>
+  <data name="Request Cancel" xml:space="preserve">
+    <value>İsteği İptal Et</value>
   </data>
-  <data name="Public" xml:space="preserve">
-    <value>Herkese Açık</value>
+  <data name="Settings" xml:space="preserve">
+    <value>Ayarlar</value>
   </data>
-  <data name="Search" xml:space="preserve">
-    <value>Ara</value>
+  <data name="Sign in for follow" xml:space="preserve">
+    <value>Takip etmek için oturum açınız</value>
   </data>
-  <data name="Total" xml:space="preserve">
-    <value>Toplam</value>
-  </data>
-  <data name="User not found" xml:space="preserve">
-    <value>Kullanıcı bulunamadı</value>
-  </data>
-  <data name="Username" xml:space="preserve">
-    <value>Kullanıcı Adı</value>
+  <data name="Unfollow" xml:space="preserve">
+    <value>Takibi Bırak</value>
   </data>
 </root>
